fix footer being too large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,40 @@ body {
     margin:0;
 }
 
+ul {
+    list-style-type: none;
+    height:100%;
+    width:100%;
+    padding:0;
+    margin:0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+ul li {
+    display:inline;
+    margin: 10px;    
+}
+
+ul li a {
+    min-width: 130px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    background-color: #eb781bff;
+    color:#fafafa;
+    border-radius: 2px;
+}
+
+ul li a:hover {
+    background-color: #fafafa;
+    color: #eb781bff;
+}
+
 /* Navbar */
 nav {
     position: fixed;
@@ -97,6 +131,10 @@ nav .row * {
     justify-content: center;
     align-items: center;
     font-weight: 700;
+}
+
+nav li a {
+    background-color: #cc5221ff;
 }
 
 /* Hero Image */
@@ -146,41 +184,5 @@ nav .row * {
 
 /* Footer */
 footer {
-    min-height: 100px;
     border-width: 0;
-}
-
-ul {
-    list-style-type: none;
-    height:100%;
-    width:100%;
-    padding:0;
-    margin:0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-}
-
-ul li {
-    display:inline;
-    margin: 10px;
-    border-radius: 2px;
-    background-color: #eb781bff;
-    color:#fafafa;
-    
-}
-
-ul li:hover {
-    background-color: #fafafa;
-    color: #eb781bff;
-}
-
-ul li a {
-    min-width: 130px;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px;
 }
